--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Deploy
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: ${{ env.FTP_HOST }}
-        username: ${{ env.FTP_USER }}
+        server: ${{ vars.FTP_HOST }}
+        username: ${{ vars.FTP_USER }}
         password: ${{ secrets.FTP_PASS }}
         local-dir: ./_site
         server-dir: ./
