--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -31,6 +31,6 @@ jobs:
         server: ${{ vars.FTP_HOST }}
         username: ${{ vars.FTP_USER }}
         password: ${{ secrets.FTP_PASS }}
-        local-dir: ./_site
+        local-dir: ./_site/
         server-dir: ./
         dangerous-clean-slate: true
