fix(workflow): change install command

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install dependencies & build
       run: |
-        npm i
+        npm ci
         npm run build
 
     - name: Deploy
