exclude wiki folder from deploy

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,4 +33,5 @@ jobs:
         password: ${{ secrets.FTP_PASS }}
         local-dir: ./_site/
         server-dir: ./
-        dangerous-clean-slate: true
+        exclude: |
+          wiki/**
